tests/transpiler/x/hs/group_by_left_join.hs
{-# LANGUAGE DuplicateRecordFields #-}
{-# LANGUAGE OverloadedRecordDot #-}
{-# LANGUAGE NoFieldSelectors #-}
import Prelude hiding (customerId, id, name)
-- Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:46 GMT+7
import Data.List (intercalate, isInfixOf, union, intersect, nub, sortOn, (\\))
import qualified Data.Map as Map
data MGroup k a = MGroup {key :: k, items :: [a]} deriving (Show)
data GenType2 = GenType2
  { id :: Int,
    customerId :: Int
  } deriving (Show)


data GenType1 = GenType1
  { id :: Int,
    name :: String
  } deriving (Show)


customers = [GenType1 {id = 1, name = "Alice"}, GenType1 {id = 2, name = "Bob"}, GenType1 {id = 3, name = "Charlie"}]

orders = [GenType2 {id = 100, customerId = 1}, GenType2 {id = 101, customerId = 1}, GenType2 {id = 102, customerId = 2}]

stats = [Map.fromList [(name, g.key), (count, length [r | r <- g.items, r.o])] | g <- [MGroup {key = k, items = [[c, o] | c <- customers, o <- orders, o.customerId == c.id && c.name == k]} | k <- nub (map (\c o -> c.name) [[c, o] | c <- customers, o <- orders, o.customerId == c.id])]]

main :: IO ()
main = do
    putStrLn "--- Group Left Join ---"
    mapM_ (\s -> do
        putStrLn show s.name ++ " " ++ "orders:" ++ " " ++ show s.count
        ) stats
